--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "gapi-script": "^1.2.0",
+    "googleapis": "^144.0.0",
     "pg": "^8.13.1"
   }
 }
