--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "gapi-script": "^1.2.0",
     "googleapis": "^144.0.0",
+    "image-size": "^2.0.2",
     "pg": "^8.13.1"
   }
 }
